--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             🌟 <a href="https://pro.miodottore.it/storie-di-successo" target="_blank" style="color:#006a59;text-decoration:underline;font-weight:500;">Storie di Successo</a>
           </li>
           <li style="display:flex;align-items:center;">
-            <img src="sandbox:/mnt/data/A_digital_vector_illustration_displays_a_stylized_.png" alt="Noa Notes Icon" width="20" height="20" style="margin-right:7px;border-radius:5px;">
+            <img src="https://enterprise-2025.github.io/Alfonso-Pesce-Software-per-poliambulatori//Noa%20Notes-%20Intelligenza%20artificiale.png" alt="Noa Notes Icon" width="20" height="20" style="margin-right:7px;border-radius:5px;">
             <a href="https://noa.ai/it/?__hstc=173359612.5c8d7d4a8411d60366ecc47dfacf3a69.1750926899238.1752732740502.1752735212110.48&__hssc=173359612.1.1752735212110&__hsfp=341126556"
                target="_blank" style="color:#007c68;text-decoration:underline;font-weight:500;">Noa Notes AI</a>
           </li>
