--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <div style="font-size:15px;color:#242727;font-weight:500;margin-bottom:2px;">
         Business Developer Sanitario
       </div>
-      <div style="font-size:14px;color:#007c68;">Emilia-Romagna · Specialista GipoNext &amp; MioDottore</div>
+      <div style="font-size:14px;color:#007c68;">Esclusivamente per le Strutture Sanitarie del Nord Italia <br> Specialista GipoNext &amp; MioDottore</div>
       <div style="font-size:13px;color:#667070;font-style:italic;margin:6px 0 10px 0;">
         “Dove c’è ambizione, porto valore.”
       </div>
       <a href="https://www.linkedin.com/in/alfonso-pesce-software-poliambulatori" target="_blank"
          style="display:inline-flex;align-items:center;text-decoration:none;color:#00c3a5;font-weight:500;font-size:14px;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" width="16" height="16" style="margin-right:6px;vertical-align:middle;border:none;">
-        LinkedIn
+        Segui tutte le novità sul mio profilo Linkedin
       </a>
     </td>
   </tr>
@@ -40,7 +40,7 @@
         </tr>
         <tr>
           <td style="font-weight:600;padding:4px 0;color:#006a59;">💬 WhatsApp:</td>
-          <td style="padding:4px 0;"><a href="https://wa.me/393293620799" style="color:#00c3a5;text-decoration:none;font-weight:500;">329 362 07 99</a></td>
+          <td style="padding:4px 0;"><a href="https://wa.me/393293620799" style="color:#00c3a5;text-decoration:none;font-weight:500;">Contattami su Whatsapp</a></td>
         </tr>
         <tr>
           <td style="font-weight:600;padding:4px 0;color:#006a59;">✉️ Email:</td>
