--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div style="font-size:15px;color:#242727;font-weight:500;margin-bottom:2px;">
         Business Developer Sanitario
       </div>
-      <div style="font-size:14px;color:#007c68;">Esclusivamente per le Strutture Sanitarie del Nord Italia <br> Specialista GipoNext &amp; MioDottore</div>
+      <div style="font-size:14px;color:#007c68;">Consulenza Esclusiva <br>per le Strutture Sanitarie del Nord Italia <br> Specialista GipoNext &amp; MioDottore</div>
       <div style="font-size:13px;color:#667070;font-style:italic;margin:6px 0 10px 0;">
         “Dove c’è ambizione, porto valore.”
       </div>
