--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <img src="https://media.licdn.com/dms/image/v2/D4D03AQE_VdDxs229tw/profile-displayphoto-scale_100_100/B4DZgR6m52G8Ag-/0/1752647233694?e=1758153600&amp;v=beta&amp;t=qM3AL6Quko9DBUf9UIzn4448iENNuXpVK-oHyGo_cM8" alt="Alfonso Pesce" width="62" height="62" style="border-radius:50%;border:2.5px solid #e0e6ed;box-shadow:0 2px 6px #f1f6fa;">
     </td>
     <td style="padding:20px 18px 10px 10px;vertical-align:top;">
-      <div style="font-weight:700;font-size:19px;color:#006a59;line-height:1.1;margin-bottom:1px;font-family:'Figtree','Roboto',Arial,sans-serif;">
-        Alfonso Pesce <span style="color:#c1f5e7;" title="Premium">★</span>
+      <div style="font-weight:700;font-size:19px;color:#006a59;line-height:1.1;margin-bottom:1px;font-family:'Figtree','Roboto',Arial,sans-serif;display:flex;align-items:center;">
+        Alfonso Pesce
+        <img src="https://enterprise-2025.github.io/Alfonso-Pesce-Software-per-poliambulatori/Miodottore-per-poliambulatorio.png" alt="MioDottore Badge" width="22" height="22" style="margin-left:7px;vertical-align:middle;">
       </div>
       <div style="font-size:15px;color:#242727;font-weight:500;margin-bottom:2px;">
         Business Developer Sanitario
@@ -70,4 +71,3 @@
     </td>
   </tr>
 </table>
-
