--- a/index.html
+++ b/index.html
@@ -36,16 +36,34 @@
     <td colspan="2" style="padding:0 24px 14px 24px;">
       <table style="width:100%;font-size:14px;color:#006a59;border-collapse:collapse;">
         <tr>
-          <td style="width:32%;font-weight:600;padding:4px 0;color:#006a59;">📞 Cellulare:</td>
-          <td style="padding:4px 0;"><a href="tel:+393293620799" style="color:#007c68;text-decoration:none;font-weight:500;">329 362 07 99</a></td>
+          <td style="width:32%;font-weight:600;padding:4px 0;color:#006a59;">
+            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/260e.svg" alt="Phone" width="16" height="16" style="vertical-align:middle;margin-right:6px;">Cellulare:
+          </td>
+          <td style="padding:4px 0;">
+            <a href="tel:+393293620799" style="color:#007c68;text-decoration:none;font-weight:500;">
+              329 362 07 99
+            </a>
+          </td>
         </tr>
         <tr>
-          <td style="font-weight:600;padding:4px 0;color:#006a59;">💬 WhatsApp:</td>
-          <td style="padding:4px 0;"><a href="https://wa.me/393293620799" style="color:#00c3a5;text-decoration:none;font-weight:500;">Contattami su Whatsapp</a></td>
+          <td style="font-weight:600;padding:4px 0;color:#006a59;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="16" height="16" style="vertical-align:middle;margin-right:6px;">WhatsApp:
+          </td>
+          <td style="padding:4px 0;">
+            <a href="https://wa.me/393293620799" style="color:#00c3a5;text-decoration:none;font-weight:500;">
+              Contattami su Whatsapp
+            </a>
+          </td>
         </tr>
         <tr>
-          <td style="font-weight:600;padding:4px 0;color:#006a59;">✉️ Email:</td>
-          <td style="padding:4px 0;"><a href="mailto:alfonso.pesce@miodottore.it" style="color:#006a59;text-decoration:none;font-weight:500;">alfonso.pesce@miodottore.it</a></td>
+          <td style="font-weight:600;padding:4px 0;color:#006a59;">
+            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2709.svg" alt="Email" width="16" height="16" style="vertical-align:middle;margin-right:6px;">Email:
+          </td>
+          <td style="padding:4px 0;">
+            <a href="mailto:alfonso.pesce@miodottore.it" style="color:#006a59;text-decoration:none;font-weight:500;">
+              alfonso.pesce@miodottore.it
+            </a>
+          </td>
         </tr>
       </table>
     </td>
