--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       <table style="width:100%;font-size:14px;color:#006a59;border-collapse:collapse;">
         <tr>
           <td style="width:32%;font-weight:600;padding:4px 0;color:#006a59;">
-            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/260e.svg" alt="Phone" width="16" height="16" style="vertical-align:middle;margin-right:6px;">Cellulare:
+            <!-- Smartphone Icon SVG -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#007c68" viewBox="0 0 24 24" style="vertical-align:middle;margin-right:6px;"><rect x="6" y="2" width="12" height="20" rx="2" fill="#00c3a5"/><rect x="9" y="18" width="6" height="2" rx="1" fill="#fff"/></svg>
+            Cellulare:
           </td>
           <td style="padding:4px 0;">
             <a href="tel:+393293620799" style="color:#007c68;text-decoration:none;font-weight:500;">
