--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
       <table style="width:100%;font-size:14px;color:#006a59;border-collapse:collapse;">
         <tr>
           <td style="width:32%;font-weight:600;padding:4px 0;color:#006a59;">
-            <!-- Smartphone Icon SVG -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#007c68" viewBox="0 0 24 24" style="vertical-align:middle;margin-right:6px;"><rect x="6" y="2" width="12" height="20" rx="2" fill="#00c3a5"/><rect x="9" y="18" width="6" height="2" rx="1" fill="#fff"/></svg>
-            Cellulare:
+            <img src="https://enterprise-2025.github.io/Alfonso-Pesce-Software-per-poliambulatori/telefono.png" alt="Smartphone" width="17" height="17" style="vertical-align:middle;margin-right:7px;">Cellulare:
           </td>
           <td style="padding:4px 0;">
             <a href="tel:+393293620799" style="color:#007c68;text-decoration:none;font-weight:500;">
@@ -49,7 +47,7 @@
         </tr>
         <tr>
           <td style="font-weight:600;padding:4px 0;color:#006a59;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="16" height="16" style="vertical-align:middle;margin-right:6px;">WhatsApp:
+            <img src="https://enterprise-2025.github.io/Alfonso-Pesce-Software-per-poliambulatori/whatsapp.png" alt="WhatsApp" width="17" height="17" style="vertical-align:middle;margin-right:7px;">WhatsApp:
           </td>
           <td style="padding:4px 0;">
             <a href="https://wa.me/393293620799" style="color:#00c3a5;text-decoration:none;font-weight:500;">
@@ -59,7 +57,7 @@
         </tr>
         <tr>
           <td style="font-weight:600;padding:4px 0;color:#006a59;">
-            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2709.svg" alt="Email" width="16" height="16" style="vertical-align:middle;margin-right:6px;">Email:
+            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2709.svg" alt="Email" width="17" height="17" style="vertical-align:middle;margin-right:7px;">Email:
           </td>
           <td style="padding:4px 0;">
             <a href="mailto:alfonso.pesce@miodottore.it" style="color:#006a59;text-decoration:none;font-weight:500;">
