--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <table style="width:100%;font-size:14px;color:#006a59;border-collapse:collapse;">
         <tr>
           <td style="width:32%;font-weight:600;padding:4px 0;color:#006a59;">
-            <img src="https://enterprise-2025.github.io/Alfonso-Pesce-Software-per-poliambulatori/telefono.png" alt="Smartphone" width="17" height="17" style="vertical-align:middle;margin-right:7px;">Cellulare:
+            📱 Cellulare:
           </td>
           <td style="padding:4px 0;">
             <a href="tel:+393293620799" style="color:#007c68;text-decoration:none;font-weight:500;">
@@ -57,7 +57,7 @@
         </tr>
         <tr>
           <td style="font-weight:600;padding:4px 0;color:#006a59;">
-            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2709.svg" alt="Email" width="17" height="17" style="vertical-align:middle;margin-right:7px;">Email:
+            ✉️ Email:
           </td>
           <td style="padding:4px 0;">
             <a href="mailto:alfonso.pesce@miodottore.it" style="color:#006a59;text-decoration:none;font-weight:500;">
